Updates: Dark mode, updated content in About section, titles sizes

--- a/about.html
+++ b/about.html
@@ -130,9 +130,23 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/AL-W.jpg" alt="Image" class="img-fluid"></p>
-            <p>Born in 1986 in Rosario, Argentina. I've been transforming ideas into digital products for more than 8 years.</p>
-            <p>Over the last 6 years I've been working as a Senior UX Designer for big clients.</p>
-            <p>Since the last year, after working as main UX Designer of the Digital Transformation team and as Scrum Master in different projects, I was able to put together a team of designers, developing myself as UX Design Team Leader and establish the UX Design throughout the company as a process.</p>
+            <p>I'm a Product Designer that loves to connect with people through design. I prefer to see things not as they are but as they could be, share my ideas and vision, and take the necessary actions to create enjoyable and seamless experiences.</p>
+            <p>I have more than 8 years of experience designing, leading, and collaborating with other teams. Currently, I'm working as UX Team Leader at 'La Segunda Seguros' in Rosario, Argentina.</p>
+            <p>My main skills are:</p>
+            <ul>
+              <li>Provide feedback to the design team.</li>
+              <li>Promote the creation and development of design patterns.</li>
+              <li>Keep an eye on consistency and accessibility.</li>
+              <li>Find out potential issues or try to solve them with the team.</li>
+              <li>Work closely with the whole team, from the stakeholders to development teams.</li>
+              <li>User-centric focus.</li>
+              <li>Over-communicate, to avoid misunderstandings and make sure that the team is aligned.</li>
+              <li>Keep close attention to details</li>
+              <li>Strong Scrum framework knowledge.</li>
+              <li>Simplicity over complexity & function over form.</li>
+              <li>Tool agnostic - I can manage a wide range of tools or quickly learn new ones.</li>
+              <li>Proficiency in English, both oral and written.</li>
+            </ul>
             <p><a href="https://www.linkedin.com/in/alelaurora/" class="readmore" target="_blank" rel="noopener noreferrer"><span class="bi bi-linkedin"></span> My Profile</a></p>
           </div>
 
