--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i> Alejandro Laurora</a>
+      <a href="index.html" class="navbar-brand d-flex flex-row align-items-center" aria-label="Go back Home"><i class="bi bi-triangle"></i> Alejandro Laurora</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
         <span></span>
       </a>
@@ -61,7 +61,7 @@
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <!-- <h2>Hey, I'm Johan Stanworth</h2> -->
             <!-- <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p> -->
-            <p class="mb-0"><strong>Born in 1986 in Rosario, Argentina. I've been transforming ideas into products for more than 8 years, with strong passion for digital experiences, seamless interactions and engagement between people and products.</strong></p>
+            <p class="mb-0">I'm a Product Designer that loves to connect with people through design. I prefer to see things not as they are but as they could be, share my ideas and vision, and take the necessary actions to create enjoyable and seamless experiences.</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -121,101 +121,128 @@
       <div class="container" id="clients">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">Brands I've worked with</h3>
+            <h4>Brands I've worked with</h4>
           </div>
         </div>
         
-        <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+        <div class="row no-gutters clients-wrap clearfix wow fadeInUp logos-light" style="visibility: visible; animation-name: fadeInUp;">
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-accru.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-accru.svg" class="img-fluid" alt="ACCRU: Academic & Community Cancer Research United logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-btg.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-btg.svg" class="img-fluid" alt="BTG Pactual logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-consumersenery.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-consumersenery.svg" class="img-fluid" alt="Consumers Energy logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-delta.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-delta.svg" class="img-fluid" alt="Delta Airlines logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-lasegunda.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-lasegunda.svg" class="img-fluid" alt="La Segunda logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-litoralgas.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-litoralgas.svg" class="img-fluid" alt="Literal Gas logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-mayo.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-mayo.svg" class="img-fluid" alt="Mayo Clinic logo">
               </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-mls.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-mls.svg" class="img-fluid" alt="The MLS logo">
               </div>
           </div>
 
           <div class="col-lg-4 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-santander.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-santander.svg" class="img-fluid" alt="Santander Bank logo">
               </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-statefarm.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-statefarm.svg" class="img-fluid" alt="Statefarm logo">
               </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/company-logos/logo-vestaplus.svg" class="img-fluid" alt="">
+                <img src="assets/img/company-logos/logo-vestaplus.svg" class="img-fluid" alt="Vestaplus logo">
               </div>
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-accru@2x.png" alt="Image" class="img-fluid"></a>
+
+        <div class="row no-gutters clients-wrap clearfix wow fadeInUp logos-dark" style="visibility: visible; animation-name: fadeInUp;">
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-accru.svg" class="img-fluid" alt="ACCRU: Academic & Community Cancer Research United logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-btg@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-btg.svg" class="img-fluid" alt="BTG Pactual logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-consumersenery@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-consumersenery.svg" class="img-fluid" alt="Consumers Energy logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-delta@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-delta.svg" class="img-fluid" alt="Delta Airlines logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-lasegunda@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-lasegunda.svg" class="img-fluid" alt="La Segunda logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-litoralgas@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-litoralgas.svg" class="img-fluid" alt="Literal Gas logo">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-mayo.svg" class="img-fluid" alt="Mayo Clinic logo">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-mls.svg" class="img-fluid" alt="The MLS logo">
+              </div>
           </div>
 
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-mayo@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-4 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-santander.svg" class="img-fluid" alt="Santander Bank logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-mls@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-4 col-md-6 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-statefarm.svg" class="img-fluid" alt="Statefarm logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-santander@2x.png" alt="Image" class="img-fluid"></a>
+          <div class="col-lg-4 col-md-6 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/company-logos/dark/logo-vestaplus.svg" class="img-fluid" alt="Vestaplus logo">
+              </div>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-vestaplus@2x.png" alt="Image" class="img-fluid"></a>
-          </div>
-        </div> -->
+        </div>
+        
       </div>
     </section><!-- End Clients Section -->
 
