Test on title spaces

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Alejandro Laurora - Product Designer</title>
+  <title>Alejandro&#x2007;Laurora&#x2007;-&#x2007;Product&#x2007;Designer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
